painting on a psd image crashes blender #40107

Closed
opened 2014-05-09 11:08:41 +02:00 by Todor Imreorov · 26 comments

System Information
Operating system and graphics card
Manjaro Linux, ati mobility radeon 4650

Blender Version
Broken 2.70-1464316

Short description of error

Exact steps for others to reproduce the error
0.smart uv project unwrap cube
1.in blender image editor load a psd file (saved in krita)
2.Paint on it (in 3d view or in texture editor)

blender will crash. This happens on both the stable 2.70 release and 2.70-1464316

**System Information** Operating system and graphics card Manjaro Linux, ati mobility radeon 4650 **Blender Version** Broken 2.70-1464316 **Short description of error** **Exact steps for others to reproduce the error** 0.smart uv project unwrap cube 1.in blender image editor load a psd file (saved in krita) 2.Paint on it (in 3d view or in texture editor) blender will crash. This happens on both the stable 2.70 release and 2.70-1464316
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TodorImreorov

Added subscriber: @TodorImreorov

Added subscriber: @dfelinto

Added subscriber: @dfelinto

I don't know if it's related, but krita PSD files have a problem - #39652

Also, I can't reproduce the issue here (OSX). And I find strange that a PSD would present a specific bug like this (internally they are all image buffers).

Can you please share a file where this problem shows up?

I don't know if it's related, but krita PSD files have a problem - #39652 Also, I can't reproduce the issue here (OSX). And I find strange that a PSD would present a specific bug like this (internally they are all image buffers). Can you please share a file where this problem shows up?

I don't know if it's related, but krita PSD files have a problem - #39652

Also, I can't reproduce the issue here (OSX). And I find strange that a PSD would present a specific bug like this (internally they are all image buffers).

Can you please share a file where this problem shows up?

I don't know if it's related, but krita PSD files have a problem - #39652 Also, I can't reproduce the issue here (OSX). And I find strange that a PSD would present a specific bug like this (internally they are all image buffers). Can you please share a file where this problem shows up?
Author

Untitled.psd
This is the problematic krita psd file that causes blender to crash.

opening it in gimp, i get a warning message about an embeded color profile (invalid- utf8 string). It asks me if I want to convert it to rgb working space.

When I convert it in gimp and save it out as another psd, the gimp psd wont load in blender at all.

Weird.

![Untitled.psd](https://archive.blender.org/developer/F88053/Untitled.psd) This is the problematic krita psd file that causes blender to crash. opening it in gimp, i get a warning message about an embeded color profile (invalid- utf8 string). It asks me if I want to convert it to rgb working space. When I convert it in gimp and save it out as another psd, the gimp psd wont load in blender at all. Weird.

Added subscriber: @mont29

Added subscriber: @mont29
Dalai Felinto was assigned by Bastien Montagne 2014-05-10 09:05:29 +02:00

Can you attach the file after you saved it in gimp too?

Can you attach the file after you saved it in gimp too?

For the records, if I open it in Photoshop and save it, it works fine.
The full backtrace is here: P60

The file saved in photoshop has colorspace "sRGB". The file saved in Krita has the colorspace "" (blank). Or it's something OIIO doesn't recognize and it spits out as "".

For the records, if I open it in Photoshop and save it, it works fine. The full backtrace is here: [P60](https://archive.blender.org/developer/P60.txt) The file saved in photoshop has colorspace "sRGB". The file saved in Krita has the colorspace "" (blank). Or it's something OIIO doesn't recognize and it spits out as "".

Added subscriber: @Sergey

Added subscriber: @Sergey

@Sergey if the file comes with no colorspace, should we assign it to a fallback ("sRGB") ?
Or the problem is in colormanagement that should be able to handle empty colorspaces?

Apart from that @TodorImreorov you could report this upstream (in krita) - https://bugs.kde.org
It may be a bug in OpenImageIO too, but I'm not sure if the PSD specs reinforce a colorspace.

@Sergey if the file comes with no colorspace, should we assign it to a fallback ("sRGB") ? Or the problem is in colormanagement that should be able to handle empty colorspaces? Apart from that @TodorImreorov you could report this upstream (in krita) - https://bugs.kde.org It may be a bug in OpenImageIO too, but I'm not sure if the PSD specs reinforce a colorspace.

This issue was referenced by blender/blender-addons-contrib@8904eaf504

This issue was referenced by blender/blender-addons-contrib@8904eaf5047780eaf97eb7dc3acebb1b65f258bd

This issue was referenced by 8904eaf504

This issue was referenced by 8904eaf5047780eaf97eb7dc3acebb1b65f258bd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8904eaf504.

Closed by commit 8904eaf504.

fixed now, we are falling back to sRGB. It is still a bug in krita, but at least it won't affect us.

fixed now, we are falling back to sRGB. It is still a bug in krita, but at least it won't affect us.
Author

Untitled2.psd

Hi, heres the file after being saved in gimp.

Thank you for resolving this bug. I hope krita devs do so as well.

![Untitled2.psd](https://archive.blender.org/developer/F88187/Untitled2.psd) Hi, heres the file after being saved in gimp. Thank you for resolving this bug. I hope krita devs do so as well.

Krita developers are very responsive (you can even find "boud" in #blendercoders IRC, which maintains PSD for krita). But they will also need a bug report in their tracker to take care of that ;)

Krita developers are very responsive (you can even find "boud" in #blendercoders IRC, which maintains PSD for krita). But they will also need a bug report in their tracker to take care of that ;)
Author
filed a bug report here: https://bugs.kde.org/show_bug.cgi?id=334582

@TodorImreorov could you attach one of your gimp files in the upstream report (in the krita tracker)?

@TodorImreorov could you attach one of your gimp files in the upstream report (in the krita tracker)?
Author

It no longer crashes blender in the newer krita, however the file imports with the wrong colors!
Screenshot_2015-05-12_19-05-24.png

try yourself:
testFile.psd

It no longer crashes blender in the newer krita, however the file imports with the wrong colors! ![Screenshot_2015-05-12_19-05-24.png](https://archive.blender.org/developer/F173426/Screenshot_2015-05-12_19-05-24.png) try yourself: ![testFile.psd](https://archive.blender.org/developer/F173428/testFile.psd)

If I open the file in PSD and save it, it looks fine in Blender.

If I open the file in PSD and save it, it looks fine in Blender.
Author

do you open and save it in gimp?
Please see this:
https://bugs.kde.org/show_bug.cgi?id=334582

Krita devs confirm this bug. Seems like a krita bug

do you open and save it in gimp? Please see this: https://bugs.kde.org/show_bug.cgi?id=334582 Krita devs confirm this bug. Seems like a krita bug

Added subscriber: @sindra1961

Added subscriber: @sindra1961

@dfelinto:
May he say that blender reads it in defiance of color profile included in the psd file?

fig.png

@dfelinto: May he say that blender reads it in defiance of color profile included in the psd file? ![fig.png](https://archive.blender.org/developer/F173839/fig.png)

@TodorImreorov:
It is one of the restrictions if I point out that you are displayed with a different color in blender.
OCIO does not support embed colorspace now.
It should be output by a console screen.

@TodorImreorov: It is one of the restrictions if I point out that you are displayed with a different color in blender. OCIO does not support embed colorspace now. It should be output by a console screen.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40107
No description provided.